# GAME-SDL-PUZZLE-Cuyo

./: .gitignore  AUTHORS  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  acinclude.m4  aclocal.m4  autogen.sh  compile.os2  config.h.in  configure  configure.ac  configure~  sdl.m4
data/: 3d.ld  Makefile.am  Makefile.in  aehnlich.ld  aliens.ld  angst.ld  antarctic.ld  ascii.ld  augen.ld  baelle.ld  baender.ld  baggis.ld  bonimali.ld  bonus.ld  bunt.ld  colorshape.ld  darken.ld  disco.ld  doors.ld  dungeon.ld  ebene.ld  elemente.ld  embroidery.ld  example.ld  explosive.ld  farming.ld  fische.ld  flechtwerk.ld  fractals.ld  genSummary.pl  globals.ld  go2.ld  gold.ld  hecken.ld  hexkugeln.ld  himmel.ld  hormone.ld  jahreszeiten.ld  jump.ld  kacheln4.ld  (+49 more)
data/pics/: lbBlack.xpm  lbBomb.xpm  lbGray.xpm  lp.src.xpm  ltCannon.xpm  ltGray.xpm  ltParatrooper.xpm  ltSky.xpm  mbaBand1.xpm  mbaBand2.xpm  mbaBand3.xpm  mbaBand4.xpm  mbaBand5.xpm  mbaGras.xpm  mbaGrau.xpm  mbaHinter.xpm  mbaHinter2.xpm  mbmBoss.xpm  mbmEnergie.xpm  mbmFeind.xpm  mbmSprites.xpm  mbmSterne12.xpm  mbmSterne4.xpm  mdFog.xpm  mdSchwarz.xpm  mfaBack.xpm  mfaCattle.xpm  mfaFence.xpm  mfaPigs.xpm  mgsGold.xpm  mgsGoldSilber.xpm  mgsGoldVerbind.xpm  mgsSilber.xpm  mgsSilberGold.xpm  mgsSilberVerbind.xpm  mgsWeiss.xpm  mihGarten.xpm  mihLoch.xpm  mihStein.xpm  mjNaegel.xpm  (+28 more)
data/sounds/: cuyo.it
datasrc/: Makefile  Makefile.common  distfiles  make.ml  make.mli  makefile.ml  reversi_brl.m4
datasrc/pics/: Makefile  aehnlich.inc  bunt.inc  colors.mgk  cuyo.xpm  cuyopov.inc  distfiles  dungeon.inc  dungeon_boden.inc  easyarg.ml  easyarg.mli  farbe.ml  farbe.mli  genSchrift.cc  gen_angst.ml  gen_augen.ml  gen_bonimali.ml  gen_common.ml  gen_common.mli  gen_fische.ml  gen_flechtwerk.ml  gen_kacheln.ml  gen_octopi.ml  gen_puzzle.ml  gen_rollenspiel.ml  gen_schemen.ml  gen_secret.ml  gen_tennis.ml  graphik.ml  graphik.mli  helfer.ml  helfer.mli  highlight.ml  i3Bunt.xcf  i3Grau.xcf  ipStart.xcf  itrAlle.xcf  iwaAlles.xcf  lrKamin.xcf  lrWasser.xcf  (+51 more)
docs/: Makefile.am  Makefile.in  cual.6  cuyo.6
icons/: Makefile.am  Makefile.in  cuyo.desktop
po/: Makefile.am  Makefile.in  cual2fakec  cuyo.pot  de.gmo  de.po  pot.sed  pt.gmo  pt.po
src/: Makefile.am  Makefile.in  aufnahme.cpp  aufnahme.h  bilddatei.cpp  bilddatei.h  bildstapel.cpp  bildstapel.h  blatt.cpp  blatt.h  blop.cpp  blop.h  blopbesitzer.cpp  blopbesitzer.h  blopgitter.cpp  blopgitter.h  code.cpp  code.h  configdatei.cpp  configdatei.h  cuyo.cpp  cuyo.h  cuyointl.h  datendatei.cpp  datendatei.h  definition.h  fall.cpp  fall.h  fehler.h  font.h  global.h  inkompatibel.h  kiplayer.cpp  kiplayer.h  knoten.cpp  knoten.h  layout.h  leveldaten.cpp  leveldaten.h  main.cpp  (+35 more)
